--- a/playbook.yml
+++ b/playbook.yml
@@ -1,4 +1,3 @@
-
 - hosts: myserver
   vars:
   - image: wllstd/apache-docker-ansible
@@ -8,18 +7,16 @@
         name:
           - python3
           - python3-docker
-          - python
-          - python-docker
-          state: present
-        when: ansible_distribution == "Ubuntu"
+        state: present
+      when: ansible_distribution == "Ubuntu"
 
     - name: install python-docker centos
       yum:
         name:
-          - python
-          - python-docker
-          state: present
-        when: ansible_distribution == "CentOS"
+          - python3
+          - python3-docker
+        state: present
+      when: ansible_distribution == "CentOS"
 
     - name: pull image docker
       docker_image:
@@ -33,6 +30,6 @@
         image: "{{ image }}"
         state: started
         published_ports:
-          - 10000:80
+        - 10000:80
         recreate: yes
 
